// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu demo examples basic 1`] = `
.glamor-37,
[data-glamor-37] {
  overflow: hidden;
}

.glamor-37 > div,
[data-glamor-37] > div {
  background-color: #fff;
  float: left;
  margin: 0 0.5rem 0.5rem 0;
  width: 14em;
}

.glamor-36,
[data-glamor-36] {
  box-sizing: border-box;
  color: #333840;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
}

.glamor-36 *,
[data-glamor-36] *,
.glamor-36 *::before,
[data-glamor-36] *::before,
.glamor-36 *::after,
[data-glamor-36] *::after {
  box-sizing: inherit;
}

.glamor-4,
[data-glamor-4] {
  color: #333840;
  cursor: pointer;
  font-weight: 400;
  padding: 0.5em 1em;
}

.glamor-4:focus,
[data-glamor-4]:focus,
.glamor-4[data-simulate-focus],
[data-glamor-4][data-simulate-focus] {
  background-color: #ebeff5;
  outline: 0;
}

.glamor-4:hover,
[data-glamor-4]:hover,
.glamor-4[data-simulate-hover],
[data-glamor-4][data-simulate-hover] {
  background-color: #ebeff5;
}

.glamor-4:active,
[data-glamor-4]:active,
.glamor-4[data-simulate-active],
[data-glamor-4][data-simulate-active] {
  background-color: #c8d1e0;
}

.glamor-4 [role="img"],
[data-glamor-4] [role="img"] {
  box-sizing: content-box;
  display: block;
  fill: #2e6fd9;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.glamor-4 [role="img"]:first-child,
[data-glamor-4] [role="img"]:first-child {
  margin-right: 0.5em;
}

.glamor-4 [role="img"]:last-child,
[data-glamor-4] [role="img"]:last-child {
  margin-left: 0.5em;
}

.glamor-3,
[data-glamor-3] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: space-between;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
}

.glamor-2,
[data-glamor-2] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex: 1 1 auto;
  flex-wrap: wrap;
  font-size: 0.875em;
  justify-content: space-between;
  padding: 0.21428571428571427em 0 0.2857142857142857em;
  white-space: normal;
  word-break: break-all;
  -webkit-flex: 1 1 auto;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
}

.glamor-0,
[data-glamor-0] {
  margin-right: 0.5714285714285714em;
  word-break: break-word;
}

.glamor-1,
[data-glamor-1] {
  color: #58606e;
  font-size: 0.75em;
  padding-top: 0.25em;
  word-break: break-word;
}

.glamor-35,
[data-glamor-35] {
  margin: 0.5em 0;
}

.glamor-35:first-child,
[data-glamor-35]:first-child,
.glamor-35 + .glamor-35,
[data-glamor-35] + [data-glamor-35] {
  margin-top: 0;
}

.glamor-35:last-child,
[data-glamor-35]:last-child,
.glamor-35[data-simulate-lastchild],
[data-glamor-35][data-simulate-lastchild] {
  margin-bottom: 0;
}

.glamor-10,
[data-glamor-10] {
  font-size: 0.75em;
  font-weight: 700;
  margin: 0;
  padding: 1.3333333333333333em 1.3333333333333333em 0.6666666666666666em;
}

.glamor-11,
[data-glamor-11] {
  fill: #8e99ab;
  font-size: 16px;
  height: 1.5em;
  width: 1.5em;
}

.glamor-23,
[data-glamor-23] {
  background-color: #c8d1e0;
  height: 1px;
  margin: 0.5em 0;
}

.glamor-29,
[data-glamor-29] {
  color: #db2929;
  cursor: pointer;
  font-weight: 400;
  padding: 0.5em 1em;
}

.glamor-29:focus,
[data-glamor-29]:focus,
.glamor-29[data-simulate-focus],
[data-glamor-29][data-simulate-focus] {
  background-color: #ebeff5;
  outline: 0;
}

.glamor-29:hover,
[data-glamor-29]:hover,
.glamor-29[data-simulate-hover],
[data-glamor-29][data-simulate-hover] {
  background-color: #ebeff5;
}

.glamor-29:active,
[data-glamor-29]:active,
.glamor-29[data-simulate-active],
[data-glamor-29][data-simulate-active] {
  background-color: #f79999;
}

.glamor-29 [role="img"],
[data-glamor-29] [role="img"] {
  box-sizing: content-box;
  display: block;
  fill: currentColor;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.glamor-29 [role="img"]:first-child,
[data-glamor-29] [role="img"]:first-child {
  margin-right: 0.5em;
}

.glamor-29 [role="img"]:last-child,
[data-glamor-29] [role="img"]:last-child {
  margin-left: 0.5em;
}

.glamor-34,
[data-glamor-34] {
  color: #afbacc;
  cursor: default;
  font-weight: 400;
  padding: 0.5em 1em;
}

.glamor-34:focus,
[data-glamor-34]:focus,
.glamor-34[data-simulate-focus],
[data-glamor-34][data-simulate-focus] {
  outline: 0;
}

.glamor-34 [role="img"],
[data-glamor-34] [role="img"] {
  box-sizing: content-box;
  display: block;
  fill: currentColor;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.glamor-34 [role="img"]:first-child,
[data-glamor-34] [role="img"]:first-child {
  margin-right: 0.5em;
}

.glamor-34 [role="img"]:last-child,
[data-glamor-34] [role="img"]:last-child {
  margin-left: 0.5em;
}

<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor_danger": "#db2929",
        "backgroundColor_danger_active": "#c71818",
        "backgroundColor_danger_activeMuted": "#f79999",
        "backgroundColor_danger_focus": "#db2929",
        "backgroundColor_danger_hover": "#eb4d4d",
        "backgroundColor_danger_muted": "#fabebe",
        "backgroundColor_disabled": "#ebeff5",
        "backgroundColor_input": "#fff",
        "backgroundColor_link_focus": "#dde3ed",
        "backgroundColor_success": "#0a8f4c",
        "backgroundColor_success_active": "#06783f",
        "backgroundColor_success_activeMuted": "#95f5c3",
        "backgroundColor_success_focus": "#0a8f4c",
        "backgroundColor_success_hover": "#10a35a",
        "backgroundColor_success_muted": "#c0fadc",
        "backgroundColor_warning": "#e05b2b",
        "backgroundColor_warning_active": "#cf4615",
        "backgroundColor_warning_activeMuted": "#fab69d",
        "backgroundColor_warning_focus": "#e05b2b",
        "backgroundColor_warning_hover": "#ed774c",
        "backgroundColor_warning_muted": "#fcd0c0",
        "borderColor": "#c8d1e0",
        "borderColor_active": "#2e6fd9",
        "borderColor_danger": "#db2929",
        "borderColor_danger_active": "#c71818",
        "borderColor_danger_focus": "#c71818",
        "borderColor_danger_hover": "#c71818",
        "borderColor_danger_muted": "#f27474",
        "borderColor_focus": "#2e6fd9",
        "borderColor_hover": "#2e6fd9",
        "borderColor_success": "#10a35a",
        "borderColor_success_active": "#0a8f4c",
        "borderColor_success_focus": "#0a8f4c",
        "borderColor_success_hover": "#0a8f4c",
        "borderColor_success_muted": "#67eba7",
        "borderColor_warning": "#e05b2b",
        "borderColor_warning_active": "#cf4615",
        "borderColor_warning_focus": "#cf4615",
        "borderColor_warning_hover": "#cf4615",
        "borderColor_warning_muted": "#f59776",
        "borderRadius_1": "0.1875em",
        "color_black": "#1d1f24",
        "color_caption": "#58606e",
        "color_gray_10": "#f5f7fa",
        "color_gray_100": "#333840",
        "color_gray_20": "#ebeff5",
        "color_gray_30": "#dde3ed",
        "color_gray_40": "#c8d1e0",
        "color_gray_50": "#afbacc",
        "color_gray_60": "#8e99ab",
        "color_gray_70": "#707a8a",
        "color_gray_80": "#58606e",
        "color_gray_90": "#434a54",
        "color_placeholder": "#8e99ab",
        "color_text": "#333840",
        "color_text_danger": "#db2929",
        "color_text_danger_active": "#c71818",
        "color_text_danger_focus": "#db2929",
        "color_text_danger_hover": "#eb4d4d",
        "color_text_disabled": "#afbacc",
        "color_text_ondanger": "#fff",
        "color_text_onprimary": "#fff",
        "color_text_onsuccess": "#fff",
        "color_text_onwarning": "#fff",
        "color_text_primary": "#2e6fd9",
        "color_text_primary_active": "#1f5dc2",
        "color_text_primary_focus": "#2e6fd9",
        "color_text_primary_hover": "#4a89e8",
        "color_text_success": "#06783f",
        "color_text_success_active": "#046132",
        "color_text_success_focus": "#06783f",
        "color_text_success_hover": "#0a8f4c",
        "color_text_warning": "#cf4615",
        "color_text_warning_active": "#bd3909",
        "color_text_warning_focus": "#cf4615",
        "color_text_warning_hover": "#e05b2b",
        "color_theme_10": "#e6eefc",
        "color_theme_100": "#0f397d",
        "color_theme_20": "#c2dbfc",
        "color_theme_30": "#9dc2fa",
        "color_theme_40": "#72a5f2",
        "color_theme_50": "#4a89e8",
        "color_theme_60": "#2e6fd9",
        "color_theme_70": "#1f5dc2",
        "color_theme_80": "#164ea8",
        "color_theme_90": "#114091",
        "color_white": "#fff",
        "direction": "ltr",
        "fontFamily": "Open Sans",
        "fontFamily_monospace": "\\"SF Mono\\", \\"Droid Sans Mono\\", \\"Source Code Pro\\", Monaco, Consolas, \\"Courier New\\", Courier, monospace",
        "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize_base": 16,
        "fontSize_h1": "2.125em",
        "fontSize_h2": "1.75em",
        "fontSize_h3": "1.375em",
        "fontSize_h4": "1.125em",
        "fontSize_h5": "0.875em",
        "fontSize_h6": "0.875em",
        "fontSize_mouse": "0.6875em",
        "fontSize_prose": "1em",
        "fontSize_ui": "0.875em",
        "fontWeight_bold": 700,
        "fontWeight_extraBold": 800,
        "fontWeight_regular": 400,
        "fontWeight_semiBold": 600,
        "lineHeight": 1.25,
        "lineHeight_prose": 1.5,
        "shadow_1": "0 1px 2px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.2)",
        "shadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.2)",
        "shadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 8px 16px 0 rgba(0,0,0,0.2)",
        "shadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 20px 16px -8px rgba(0,0,0,0.2)",
        "shadow_5": "0 16px 24px 0 rgba(0,0,0,0.2), 0 32px 24px -16px rgba(0,0,0,0.2)",
        "size_jumbo": "3.25em",
        "size_large": "2.5em",
        "size_medium": "2em",
        "size_small": "1.5em",
        "space_inline_lg": "1.5em",
        "space_inline_md": "1em",
        "space_inline_sm": "0.5em",
        "space_inline_xl": "2em",
        "space_inline_xs": "0.25em",
        "space_inline_xxl": "4em",
        "space_inline_xxs": "0.125em",
        "space_inset_lg": "1.5em",
        "space_inset_md": "1em",
        "space_inset_sm": "0.5em",
        "space_stack_lg": "1.5em",
        "space_stack_md": "1em",
        "space_stack_sm": "0.5em",
        "space_stack_xl": "2em",
        "space_stack_xs": "0.25em",
        "space_stack_xxl": "4em",
        "space_stack_xxs": "0.125em",
        "zIndex_100": 100,
        "zIndex_1600": 1600,
        "zIndex_200": 200,
        "zIndex_400": 400,
        "zIndex_800": 800,
      }
    }
  >
    <LiveProvider
      code="
    <DemoLayout>
      <Menu>
        <MenuItem onClick={event => { console.log(event) }}>
          Menu item with onClick
        </MenuItem>
        <MenuItem secondaryText=\\"Secondary text\\">
          Menu item
        </MenuItem>
        <MenuGroup title=\\"Group Title\\">
          <MenuItem iconStart={<IconCloud />}>Icon at start</MenuItem>
          <MenuItem iconEnd={<IconCloud />}>Icon at end</MenuItem>
          <MenuDivider />
          <MenuItem variant=\\"danger\\">Danger variant</MenuItem>
          <MenuItem disabled onClick={event => { console.log(event) }}>Disabled menu item</MenuItem>
        </MenuGroup>
      </Menu>
    </DemoLayout>"
      mountStylesheet={false}
      noInline={false}
      scope={
        Object {
          "DemoLayout": [Function],
          "IconCloud": [Function],
          "Menu": [Function],
          "MenuDivider": [Function],
          "MenuGroup": [Function],
          "MenuItem": [Function],
        }
      }
    >
      <div
        className="react-live"
        scope={
          Object {
            "DemoLayout": [Function],
            "IconCloud": [Function],
            "Menu": [Function],
            "MenuDivider": [Function],
            "MenuGroup": [Function],
            "MenuItem": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <glamorous(div)>
              <div
                className="glamor-37"
              >
                <Menu>
                  <Menu>
                    <div
                      className="glamor-36"
                    >
                      <MenuItem
                        onClick={[Function]}
                      >
                        <MenuItem
                          disabled={undefined}
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          tabIndex={0}
                          variant="regular"
                        >
                          <div
                            className="glamor-4"
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            tabIndex={0}
                          >
                            <glamorous(span)>
                              <span
                                className="glamor-3"
                              >
                                <glamorous(span)>
                                  <span
                                    className="glamor-2"
                                  >
                                    <glamorous(span)>
                                      <span
                                        className="glamor-0"
                                      >
                                        Menu item with onClick
                                      </span>
                                    </glamorous(span)>
                                    <glamorous(span)>
                                      <span
                                        className="glamor-1"
                                      />
                                    </glamorous(span)>
                                  </span>
                                </glamorous(span)>
                              </span>
                            </glamorous(span)>
                          </div>
                        </MenuItem>
                      </MenuItem>
                      <MenuItem
                        secondaryText="Secondary text"
                      >
                        <MenuItem
                          disabled={undefined}
                          onClick={undefined}
                          onKeyDown={undefined}
                          tabIndex={0}
                          variant="regular"
                        >
                          <div
                            className="glamor-4"
                            onClick={undefined}
                            onKeyDown={undefined}
                            tabIndex={0}
                          >
                            <glamorous(span)>
                              <span
                                className="glamor-3"
                              >
                                <glamorous(span)>
                                  <span
                                    className="glamor-2"
                                  >
                                    <glamorous(span)>
                                      <span
                                        className="glamor-0"
                                      >
                                        Menu item
                                      </span>
                                    </glamorous(span)>
                                    <glamorous(span)>
                                      <span
                                        className="glamor-1"
                                      >
                                        Secondary text
                                      </span>
                                    </glamorous(span)>
                                  </span>
                                </glamorous(span)>
                              </span>
                            </glamorous(span)>
                          </div>
                        </MenuItem>
                      </MenuItem>
                      <MenuGroup
                        title="Group Title"
                      >
                        <MenuGroup>
                          <div
                            className="glamor-35"
                          >
                            <MenuGroupTitle>
                              <MenuGroupTitle>
                                <h3
                                  className="glamor-10"
                                >
                                  Group Title
                                </h3>
                              </MenuGroupTitle>
                            </MenuGroupTitle>
                            <MenuItem
                              iconStart={<IconCloud />}
                            >
                              <MenuItem
                                disabled={undefined}
                                onClick={undefined}
                                onKeyDown={undefined}
                                tabIndex={0}
                                variant="regular"
                              >
                                <div
                                  className="glamor-4"
                                  onClick={undefined}
                                  onKeyDown={undefined}
                                  tabIndex={0}
                                >
                                  <glamorous(span)>
                                    <span
                                      className="glamor-3"
                                    >
                                      <IconCloud
                                        key="iconStart"
                                        size="1.5em"
                                      >
                                        <Icon
                                          rtl={false}
                                          size="1.5em"
                                        >
                                          <glamorous(svg)
                                            aria-hidden={true}
                                            aria-labelledby={undefined}
                                            role="img"
                                            rtl={false}
                                            size="1.5em"
                                            viewBox="0 0 24 24"
                                          >
                                            <svg
                                              aria-hidden={true}
                                              aria-labelledby={undefined}
                                              className="glamor-11"
                                              role="img"
                                              viewBox="0 0 24 24"
                                            >
                                              <g>
                                                <path
                                                  d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                                                />
                                              </g>
                                            </svg>
                                          </glamorous(svg)>
                                        </Icon>
                                      </IconCloud>
                                      <glamorous(span)>
                                        <span
                                          className="glamor-2"
                                        >
                                          <glamorous(span)>
                                            <span
                                              className="glamor-0"
                                            >
                                              Icon at start
                                            </span>
                                          </glamorous(span)>
                                          <glamorous(span)>
                                            <span
                                              className="glamor-1"
                                            />
                                          </glamorous(span)>
                                        </span>
                                      </glamorous(span)>
                                    </span>
                                  </glamorous(span)>
                                </div>
                              </MenuItem>
                            </MenuItem>
                            <MenuItem
                              iconEnd={<IconCloud />}
                            >
                              <MenuItem
                                disabled={undefined}
                                onClick={undefined}
                                onKeyDown={undefined}
                                tabIndex={0}
                                variant="regular"
                              >
                                <div
                                  className="glamor-4"
                                  onClick={undefined}
                                  onKeyDown={undefined}
                                  tabIndex={0}
                                >
                                  <glamorous(span)>
                                    <span
                                      className="glamor-3"
                                    >
                                      <glamorous(span)>
                                        <span
                                          className="glamor-2"
                                        >
                                          <glamorous(span)>
                                            <span
                                              className="glamor-0"
                                            >
                                              Icon at end
                                            </span>
                                          </glamorous(span)>
                                          <glamorous(span)>
                                            <span
                                              className="glamor-1"
                                            />
                                          </glamorous(span)>
                                        </span>
                                      </glamorous(span)>
                                      <IconCloud
                                        key="iconEnd"
                                        size="1.5em"
                                      >
                                        <Icon
                                          rtl={false}
                                          size="1.5em"
                                        >
                                          <glamorous(svg)
                                            aria-hidden={true}
                                            aria-labelledby={undefined}
                                            role="img"
                                            rtl={false}
                                            size="1.5em"
                                            viewBox="0 0 24 24"
                                          >
                                            <svg
                                              aria-hidden={true}
                                              aria-labelledby={undefined}
                                              className="glamor-11"
                                              role="img"
                                              viewBox="0 0 24 24"
                                            >
                                              <g>
                                                <path
                                                  d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                                                />
                                              </g>
                                            </svg>
                                          </glamorous(svg)>
                                        </Icon>
                                      </IconCloud>
                                    </span>
                                  </glamorous(span)>
                                </div>
                              </MenuItem>
                            </MenuItem>
                            <MenuDivider>
                              <MenuDivider
                                role="separator"
                              >
                                <div
                                  className="glamor-23"
                                  role="separator"
                                />
                              </MenuDivider>
                            </MenuDivider>
                            <MenuItem
                              variant="danger"
                            >
                              <MenuItem
                                disabled={undefined}
                                onClick={undefined}
                                onKeyDown={undefined}
                                tabIndex={0}
                                variant="danger"
                              >
                                <div
                                  className="glamor-29"
                                  onClick={undefined}
                                  onKeyDown={undefined}
                                  tabIndex={0}
                                >
                                  <glamorous(span)>
                                    <span
                                      className="glamor-3"
                                    >
                                      <IconDanger
                                        size="1.5em"
                                      >
                                        <Icon
                                          rtl={false}
                                          size="1.5em"
                                        >
                                          <glamorous(svg)
                                            aria-hidden={true}
                                            aria-labelledby={undefined}
                                            role="img"
                                            rtl={false}
                                            size="1.5em"
                                            viewBox="0 0 24 24"
                                          >
                                            <svg
                                              aria-hidden={true}
                                              aria-labelledby={undefined}
                                              className="glamor-11"
                                              role="img"
                                              viewBox="0 0 24 24"
                                            >
                                              <g>
                                                <path
                                                  d="M3.94 19.49h16.118a1 1 0 0 0 .866-1.498l-8.06-13.99a.996.996 0 0 0-1.732-.001L3.074 17.993a.998.998 0 0 0 .867 1.499zM12 17a1 1 0 1 1 0-2 1 1 0 0 1 0 2zm1-3.503h-2v-5h2v5z"
                                                />
                                              </g>
                                            </svg>
                                          </glamorous(svg)>
                                        </Icon>
                                      </IconDanger>
                                      <glamorous(span)>
                                        <span
                                          className="glamor-2"
                                        >
                                          <glamorous(span)>
                                            <span
                                              className="glamor-0"
                                            >
                                              Danger variant
                                            </span>
                                          </glamorous(span)>
                                          <glamorous(span)>
                                            <span
                                              className="glamor-1"
                                            />
                                          </glamorous(span)>
                                        </span>
                                      </glamorous(span)>
                                    </span>
                                  </glamorous(span)>
                                </div>
                              </MenuItem>
                            </MenuItem>
                            <MenuItem
                              disabled={true}
                              onClick={[Function]}
                            >
                              <MenuItem
                                disabled={true}
                                onClick={undefined}
                                onKeyDown={[Function]}
                                tabIndex="-1"
                                variant="regular"
                              >
                                <div
                                  className="glamor-34"
                                  onClick={undefined}
                                  onKeyDown={[Function]}
                                  tabIndex="-1"
                                >
                                  <glamorous(span)>
                                    <span
                                      className="glamor-3"
                                    >
                                      <glamorous(span)>
                                        <span
                                          className="glamor-2"
                                        >
                                          <glamorous(span)>
                                            <span
                                              className="glamor-0"
                                            >
                                              Disabled menu item
                                            </span>
                                          </glamorous(span)>
                                          <glamorous(span)>
                                            <span
                                              className="glamor-1"
                                            />
                                          </glamorous(span)>
                                        </span>
                                      </glamorous(span)>
                                    </span>
                                  </glamorous(span)>
                                </div>
                              </MenuItem>
                            </MenuItem>
                          </div>
                        </MenuGroup>
                      </MenuGroup>
                    </div>
                  </Menu>
                </Menu>
              </div>
            </glamorous(div)>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Menu demo examples data 1`] = `
.glamor-41,
[data-glamor-41] {
  overflow: hidden;
}

.glamor-41 > div,
[data-glamor-41] > div {
  background-color: #fff;
  float: left;
  margin: 0 0.5rem 0.5rem 0;
  width: 14em;
}

.glamor-40,
[data-glamor-40] {
  box-sizing: border-box;
  color: #333840;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
}

.glamor-40 *,
[data-glamor-40] *,
.glamor-40 *::before,
[data-glamor-40] *::before,
.glamor-40 *::after,
[data-glamor-40] *::after {
  box-sizing: inherit;
}

.glamor-4,
[data-glamor-4] {
  color: #333840;
  cursor: pointer;
  font-weight: 400;
  padding: 0.5em 1em;
}

.glamor-4:focus,
[data-glamor-4]:focus,
.glamor-4[data-simulate-focus],
[data-glamor-4][data-simulate-focus] {
  background-color: #ebeff5;
  outline: 0;
}

.glamor-4:hover,
[data-glamor-4]:hover,
.glamor-4[data-simulate-hover],
[data-glamor-4][data-simulate-hover] {
  background-color: #ebeff5;
}

.glamor-4:active,
[data-glamor-4]:active,
.glamor-4[data-simulate-active],
[data-glamor-4][data-simulate-active] {
  background-color: #c8d1e0;
}

.glamor-4 [role="img"],
[data-glamor-4] [role="img"] {
  box-sizing: content-box;
  display: block;
  fill: #2e6fd9;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.glamor-4 [role="img"]:first-child,
[data-glamor-4] [role="img"]:first-child {
  margin-right: 0.5em;
}

.glamor-4 [role="img"]:last-child,
[data-glamor-4] [role="img"]:last-child {
  margin-left: 0.5em;
}

.glamor-3,
[data-glamor-3] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: space-between;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
}

.glamor-2,
[data-glamor-2] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex: 1 1 auto;
  flex-wrap: wrap;
  font-size: 0.875em;
  justify-content: space-between;
  padding: 0.21428571428571427em 0 0.2857142857142857em;
  white-space: normal;
  word-break: break-all;
  -webkit-flex: 1 1 auto;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
}

.glamor-0,
[data-glamor-0] {
  margin-right: 0.5714285714285714em;
  word-break: break-word;
}

.glamor-1,
[data-glamor-1] {
  color: #58606e;
  font-size: 0.75em;
  padding-top: 0.25em;
  word-break: break-word;
}

.glamor-10,
[data-glamor-10] {
  margin: 0.5em 0;
}

.glamor-10:first-child,
[data-glamor-10]:first-child,
.glamor-10 + .glamor-10,
[data-glamor-10] + [data-glamor-10] {
  margin-top: 0;
}

.glamor-10:last-child,
[data-glamor-10]:last-child,
.glamor-10[data-simulate-lastchild],
[data-glamor-10][data-simulate-lastchild] {
  margin-bottom: 0;
}

.glamor-11,
[data-glamor-11] {
  font-size: 0.75em;
  font-weight: 700;
  margin: 0;
  padding: 1.3333333333333333em 1.3333333333333333em 0.6666666666666666em;
}

.glamor-12,
[data-glamor-12] {
  fill: #8e99ab;
  font-size: 16px;
  height: 1.5em;
  width: 1.5em;
}

.glamor-24,
[data-glamor-24] {
  background-color: #c8d1e0;
  height: 1px;
  margin: 0.5em 0;
}

.glamor-30,
[data-glamor-30] {
  color: #db2929;
  cursor: pointer;
  font-weight: 400;
  padding: 0.5em 1em;
}

.glamor-30:focus,
[data-glamor-30]:focus,
.glamor-30[data-simulate-focus],
[data-glamor-30][data-simulate-focus] {
  background-color: #ebeff5;
  outline: 0;
}

.glamor-30:hover,
[data-glamor-30]:hover,
.glamor-30[data-simulate-hover],
[data-glamor-30][data-simulate-hover] {
  background-color: #ebeff5;
}

.glamor-30:active,
[data-glamor-30]:active,
.glamor-30[data-simulate-active],
[data-glamor-30][data-simulate-active] {
  background-color: #f79999;
}

.glamor-30 [role="img"],
[data-glamor-30] [role="img"] {
  box-sizing: content-box;
  display: block;
  fill: currentColor;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.glamor-30 [role="img"]:first-child,
[data-glamor-30] [role="img"]:first-child {
  margin-right: 0.5em;
}

.glamor-30 [role="img"]:last-child,
[data-glamor-30] [role="img"]:last-child {
  margin-left: 0.5em;
}

.glamor-35,
[data-glamor-35] {
  color: #afbacc;
  cursor: default;
  font-weight: 400;
  padding: 0.5em 1em;
}

.glamor-35:focus,
[data-glamor-35]:focus,
.glamor-35[data-simulate-focus],
[data-glamor-35][data-simulate-focus] {
  outline: 0;
}

.glamor-35 [role="img"],
[data-glamor-35] [role="img"] {
  box-sizing: content-box;
  display: block;
  fill: currentColor;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.glamor-35 [role="img"]:first-child,
[data-glamor-35] [role="img"]:first-child {
  margin-right: 0.5em;
}

.glamor-35 [role="img"]:last-child,
[data-glamor-35] [role="img"]:last-child {
  margin-left: 0.5em;
}

.glamor-38,
[data-glamor-38] {
  box-sizing: border-box;
  color: #333840;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  padding: 0.5em 1em;
  text-decoration: none;
}

.glamor-38 *,
[data-glamor-38] *,
.glamor-38 *::before,
[data-glamor-38] *::before,
.glamor-38 *::after,
[data-glamor-38] *::after {
  box-sizing: inherit;
}

.glamor-38:focus,
[data-glamor-38]:focus,
.glamor-38[data-simulate-focus],
[data-glamor-38][data-simulate-focus] {
  background-color: #c2dbfc;
  outline: 0;
}

.glamor-38:hover,
[data-glamor-38]:hover,
.glamor-38[data-simulate-hover],
[data-glamor-38][data-simulate-hover] {
  background-color: #c2dbfc;
}

.glamor-38:active,
[data-glamor-38]:active,
.glamor-38[data-simulate-active],
[data-glamor-38][data-simulate-active] {
  background-color: #72a5f2;
}

.glamor-36,
[data-glamor-36] {
  border-radius: 1em;
  display: block;
  flex: 0 0 auto;
  height: 2em;
  margin-right: 0.5em;
  width: 2em;
  -webkit-flex: 0 0 auto;
}

.glamor-37,
[data-glamor-37] {
  flex: 1 1 auto;
  font-size: 0.875em;
  padding: 0.5em 0;
  white-space: normal;
  word-break: break-all;
  -webkit-flex: 1 1 auto;
}

<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor_danger": "#db2929",
        "backgroundColor_danger_active": "#c71818",
        "backgroundColor_danger_activeMuted": "#f79999",
        "backgroundColor_danger_focus": "#db2929",
        "backgroundColor_danger_hover": "#eb4d4d",
        "backgroundColor_danger_muted": "#fabebe",
        "backgroundColor_disabled": "#ebeff5",
        "backgroundColor_input": "#fff",
        "backgroundColor_link_focus": "#dde3ed",
        "backgroundColor_success": "#0a8f4c",
        "backgroundColor_success_active": "#06783f",
        "backgroundColor_success_activeMuted": "#95f5c3",
        "backgroundColor_success_focus": "#0a8f4c",
        "backgroundColor_success_hover": "#10a35a",
        "backgroundColor_success_muted": "#c0fadc",
        "backgroundColor_warning": "#e05b2b",
        "backgroundColor_warning_active": "#cf4615",
        "backgroundColor_warning_activeMuted": "#fab69d",
        "backgroundColor_warning_focus": "#e05b2b",
        "backgroundColor_warning_hover": "#ed774c",
        "backgroundColor_warning_muted": "#fcd0c0",
        "borderColor": "#c8d1e0",
        "borderColor_active": "#2e6fd9",
        "borderColor_danger": "#db2929",
        "borderColor_danger_active": "#c71818",
        "borderColor_danger_focus": "#c71818",
        "borderColor_danger_hover": "#c71818",
        "borderColor_danger_muted": "#f27474",
        "borderColor_focus": "#2e6fd9",
        "borderColor_hover": "#2e6fd9",
        "borderColor_success": "#10a35a",
        "borderColor_success_active": "#0a8f4c",
        "borderColor_success_focus": "#0a8f4c",
        "borderColor_success_hover": "#0a8f4c",
        "borderColor_success_muted": "#67eba7",
        "borderColor_warning": "#e05b2b",
        "borderColor_warning_active": "#cf4615",
        "borderColor_warning_focus": "#cf4615",
        "borderColor_warning_hover": "#cf4615",
        "borderColor_warning_muted": "#f59776",
        "borderRadius_1": "0.1875em",
        "color_black": "#1d1f24",
        "color_caption": "#58606e",
        "color_gray_10": "#f5f7fa",
        "color_gray_100": "#333840",
        "color_gray_20": "#ebeff5",
        "color_gray_30": "#dde3ed",
        "color_gray_40": "#c8d1e0",
        "color_gray_50": "#afbacc",
        "color_gray_60": "#8e99ab",
        "color_gray_70": "#707a8a",
        "color_gray_80": "#58606e",
        "color_gray_90": "#434a54",
        "color_placeholder": "#8e99ab",
        "color_text": "#333840",
        "color_text_danger": "#db2929",
        "color_text_danger_active": "#c71818",
        "color_text_danger_focus": "#db2929",
        "color_text_danger_hover": "#eb4d4d",
        "color_text_disabled": "#afbacc",
        "color_text_ondanger": "#fff",
        "color_text_onprimary": "#fff",
        "color_text_onsuccess": "#fff",
        "color_text_onwarning": "#fff",
        "color_text_primary": "#2e6fd9",
        "color_text_primary_active": "#1f5dc2",
        "color_text_primary_focus": "#2e6fd9",
        "color_text_primary_hover": "#4a89e8",
        "color_text_success": "#06783f",
        "color_text_success_active": "#046132",
        "color_text_success_focus": "#06783f",
        "color_text_success_hover": "#0a8f4c",
        "color_text_warning": "#cf4615",
        "color_text_warning_active": "#bd3909",
        "color_text_warning_focus": "#cf4615",
        "color_text_warning_hover": "#e05b2b",
        "color_theme_10": "#e6eefc",
        "color_theme_100": "#0f397d",
        "color_theme_20": "#c2dbfc",
        "color_theme_30": "#9dc2fa",
        "color_theme_40": "#72a5f2",
        "color_theme_50": "#4a89e8",
        "color_theme_60": "#2e6fd9",
        "color_theme_70": "#1f5dc2",
        "color_theme_80": "#164ea8",
        "color_theme_90": "#114091",
        "color_white": "#fff",
        "direction": "ltr",
        "fontFamily": "Open Sans",
        "fontFamily_monospace": "\\"SF Mono\\", \\"Droid Sans Mono\\", \\"Source Code Pro\\", Monaco, Consolas, \\"Courier New\\", Courier, monospace",
        "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize_base": 16,
        "fontSize_h1": "2.125em",
        "fontSize_h2": "1.75em",
        "fontSize_h3": "1.375em",
        "fontSize_h4": "1.125em",
        "fontSize_h5": "0.875em",
        "fontSize_h6": "0.875em",
        "fontSize_mouse": "0.6875em",
        "fontSize_prose": "1em",
        "fontSize_ui": "0.875em",
        "fontWeight_bold": 700,
        "fontWeight_extraBold": 800,
        "fontWeight_regular": 400,
        "fontWeight_semiBold": 600,
        "lineHeight": 1.25,
        "lineHeight_prose": 1.5,
        "shadow_1": "0 1px 2px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.2)",
        "shadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.2)",
        "shadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 8px 16px 0 rgba(0,0,0,0.2)",
        "shadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 20px 16px -8px rgba(0,0,0,0.2)",
        "shadow_5": "0 16px 24px 0 rgba(0,0,0,0.2), 0 32px 24px -16px rgba(0,0,0,0.2)",
        "size_jumbo": "3.25em",
        "size_large": "2.5em",
        "size_medium": "2em",
        "size_small": "1.5em",
        "space_inline_lg": "1.5em",
        "space_inline_md": "1em",
        "space_inline_sm": "0.5em",
        "space_inline_xl": "2em",
        "space_inline_xs": "0.25em",
        "space_inline_xxl": "4em",
        "space_inline_xxs": "0.125em",
        "space_inset_lg": "1.5em",
        "space_inset_md": "1em",
        "space_inset_sm": "0.5em",
        "space_stack_lg": "1.5em",
        "space_stack_md": "1em",
        "space_stack_sm": "0.5em",
        "space_stack_xl": "2em",
        "space_stack_xs": "0.25em",
        "space_stack_xxl": "4em",
        "space_stack_xxs": "0.125em",
        "zIndex_100": 100,
        "zIndex_1600": 1600,
        "zIndex_200": 200,
        "zIndex_400": 400,
        "zIndex_800": 800,
      }
    }
  >
    <LiveProvider
      code="
    () => {
      const data = [
        {
          items: [
            {
              text: 'Menu item with onClick',
              onClick: event => { console.log(event); }
            },
            {
              text: 'Menu item',
              secondaryText: 'Secondary text'
            }
          ]
        },
        {
          title: 'Group Title',
          items: [
            {
              text: 'Icon at start',
              iconStart: <IconCloud />
            },
            {
              text: 'Icon at end',
              iconEnd: <IconCloud />
            },
            {
              divider: true
            },
            {
              text: 'Danger variant',
              variant: 'danger' // 'danger' | 'success' | 'warning'
            },
            {
              text: 'Disabled menu item',
              disabled: true,
              onClick: () => { console.log('onClick is not triggered for disabled items'); }
            },
            {
              text: 'Custom render',
              avatar: '/images/125x125.png',
              href: '/components/menu-item#custom-render', // <-- Details here
              render: CustomRender
            }
          ]
        }
      ];

      return (
        <DemoLayout>
          <Menu data={data} />
        </DemoLayout>
      );
    }"
      mountStylesheet={false}
      noInline={false}
      scope={
        Object {
          "CustomRender": [Function],
          "DemoLayout": [Function],
          "IconCloud": [Function],
          "Menu": [Function],
        }
      }
    >
      <div
        className="react-live"
        scope={
          Object {
            "CustomRender": [Function],
            "DemoLayout": [Function],
            "IconCloud": [Function],
            "Menu": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <wrappedPFC>
              <glamorous(div)>
                <div
                  className="glamor-41"
                >
                  <Menu
                    data={
                      Array [
                        Object {
                          "items": Array [
                            Object {
                              "onClick": [Function],
                              "text": "Menu item with onClick",
                            },
                            Object {
                              "secondaryText": "Secondary text",
                              "text": "Menu item",
                            },
                          ],
                        },
                        Object {
                          "items": Array [
                            Object {
                              "iconStart": <IconCloud />,
                              "text": "Icon at start",
                            },
                            Object {
                              "iconEnd": <IconCloud />,
                              "text": "Icon at end",
                            },
                            Object {
                              "divider": true,
                            },
                            Object {
                              "text": "Danger variant",
                              "variant": "danger",
                            },
                            Object {
                              "disabled": true,
                              "onClick": [Function],
                              "text": "Disabled menu item",
                            },
                            Object {
                              "avatar": "/images/125x125.png",
                              "href": "/components/menu-item#custom-render",
                              "render": [Function],
                              "text": "Custom render",
                            },
                          ],
                          "title": "Group Title",
                        },
                      ]
                    }
                  >
                    <Menu>
                      <div
                        className="glamor-40"
                      >
                        <MenuGroup
                          key="0"
                          title={undefined}
                        >
                          <MenuGroup>
                            <div
                              className="glamor-10"
                            >
                              <MenuItem
                                item={
                                  Object {
                                    "onClick": [Function],
                                    "text": "Menu item with onClick",
                                  }
                                }
                                key="0"
                                onClick={[Function]}
                              >
                                <MenuItem
                                  disabled={undefined}
                                  item={
                                    Object {
                                      "onClick": [Function],
                                      "text": "Menu item with onClick",
                                    }
                                  }
                                  onClick={[Function]}
                                  onKeyDown={[Function]}
                                  tabIndex={0}
                                  variant="regular"
                                >
                                  <div
                                    className="glamor-4"
                                    onClick={[Function]}
                                    onKeyDown={[Function]}
                                    tabIndex={0}
                                  >
                                    <glamorous(span)>
                                      <span
                                        className="glamor-3"
                                      >
                                        <glamorous(span)>
                                          <span
                                            className="glamor-2"
                                          >
                                            <glamorous(span)>
                                              <span
                                                className="glamor-0"
                                              >
                                                Menu item with onClick
                                              </span>
                                            </glamorous(span)>
                                            <glamorous(span)>
                                              <span
                                                className="glamor-1"
                                              />
                                            </glamorous(span)>
                                          </span>
                                        </glamorous(span)>
                                      </span>
                                    </glamorous(span)>
                                  </div>
                                </MenuItem>
                              </MenuItem>
                              <MenuItem
                                item={
                                  Object {
                                    "secondaryText": "Secondary text",
                                    "text": "Menu item",
                                  }
                                }
                                key="1"
                                secondaryText="Secondary text"
                              >
                                <MenuItem
                                  disabled={undefined}
                                  item={
                                    Object {
                                      "secondaryText": "Secondary text",
                                      "text": "Menu item",
                                    }
                                  }
                                  onClick={undefined}
                                  onKeyDown={undefined}
                                  tabIndex={0}
                                  variant="regular"
                                >
                                  <div
                                    className="glamor-4"
                                    onClick={undefined}
                                    onKeyDown={undefined}
                                    tabIndex={0}
                                  >
                                    <glamorous(span)>
                                      <span
                                        className="glamor-3"
                                      >
                                        <glamorous(span)>
                                          <span
                                            className="glamor-2"
                                          >
                                            <glamorous(span)>
                                              <span
                                                className="glamor-0"
                                              >
                                                Menu item
                                              </span>
                                            </glamorous(span)>
                                            <glamorous(span)>
                                              <span
                                                className="glamor-1"
                                              >
                                                Secondary text
                                              </span>
                                            </glamorous(span)>
                                          </span>
                                        </glamorous(span)>
                                      </span>
                                    </glamorous(span)>
                                  </div>
                                </MenuItem>
                              </MenuItem>
                            </div>
                          </MenuGroup>
                        </MenuGroup>
                        <MenuGroup
                          key="1"
                          title="Group Title"
                        >
                          <MenuGroup>
                            <div
                              className="glamor-10"
                            >
                              <MenuGroupTitle>
                                <MenuGroupTitle>
                                  <h3
                                    className="glamor-11"
                                  >
                                    Group Title
                                  </h3>
                                </MenuGroupTitle>
                              </MenuGroupTitle>
                              <MenuItem
                                iconStart={<IconCloud />}
                                item={
                                  Object {
                                    "iconStart": <IconCloud />,
                                    "text": "Icon at start",
                                  }
                                }
                                key="0"
                              >
                                <MenuItem
                                  disabled={undefined}
                                  item={
                                    Object {
                                      "iconStart": <IconCloud />,
                                      "text": "Icon at start",
                                    }
                                  }
                                  onClick={undefined}
                                  onKeyDown={undefined}
                                  tabIndex={0}
                                  variant="regular"
                                >
                                  <div
                                    className="glamor-4"
                                    onClick={undefined}
                                    onKeyDown={undefined}
                                    tabIndex={0}
                                  >
                                    <glamorous(span)>
                                      <span
                                        className="glamor-3"
                                      >
                                        <IconCloud
                                          key="iconStart"
                                          size="1.5em"
                                        >
                                          <Icon
                                            rtl={false}
                                            size="1.5em"
                                          >
                                            <glamorous(svg)
                                              aria-hidden={true}
                                              aria-labelledby={undefined}
                                              role="img"
                                              rtl={false}
                                              size="1.5em"
                                              viewBox="0 0 24 24"
                                            >
                                              <svg
                                                aria-hidden={true}
                                                aria-labelledby={undefined}
                                                className="glamor-12"
                                                role="img"
                                                viewBox="0 0 24 24"
                                              >
                                                <g>
                                                  <path
                                                    d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                                                  />
                                                </g>
                                              </svg>
                                            </glamorous(svg)>
                                          </Icon>
                                        </IconCloud>
                                        <glamorous(span)>
                                          <span
                                            className="glamor-2"
                                          >
                                            <glamorous(span)>
                                              <span
                                                className="glamor-0"
                                              >
                                                Icon at start
                                              </span>
                                            </glamorous(span)>
                                            <glamorous(span)>
                                              <span
                                                className="glamor-1"
                                              />
                                            </glamorous(span)>
                                          </span>
                                        </glamorous(span)>
                                      </span>
                                    </glamorous(span)>
                                  </div>
                                </MenuItem>
                              </MenuItem>
                              <MenuItem
                                iconEnd={<IconCloud />}
                                item={
                                  Object {
                                    "iconEnd": <IconCloud />,
                                    "text": "Icon at end",
                                  }
                                }
                                key="1"
                              >
                                <MenuItem
                                  disabled={undefined}
                                  item={
                                    Object {
                                      "iconEnd": <IconCloud />,
                                      "text": "Icon at end",
                                    }
                                  }
                                  onClick={undefined}
                                  onKeyDown={undefined}
                                  tabIndex={0}
                                  variant="regular"
                                >
                                  <div
                                    className="glamor-4"
                                    onClick={undefined}
                                    onKeyDown={undefined}
                                    tabIndex={0}
                                  >
                                    <glamorous(span)>
                                      <span
                                        className="glamor-3"
                                      >
                                        <glamorous(span)>
                                          <span
                                            className="glamor-2"
                                          >
                                            <glamorous(span)>
                                              <span
                                                className="glamor-0"
                                              >
                                                Icon at end
                                              </span>
                                            </glamorous(span)>
                                            <glamorous(span)>
                                              <span
                                                className="glamor-1"
                                              />
                                            </glamorous(span)>
                                          </span>
                                        </glamorous(span)>
                                        <IconCloud
                                          key="iconEnd"
                                          size="1.5em"
                                        >
                                          <Icon
                                            rtl={false}
                                            size="1.5em"
                                          >
                                            <glamorous(svg)
                                              aria-hidden={true}
                                              aria-labelledby={undefined}
                                              role="img"
                                              rtl={false}
                                              size="1.5em"
                                              viewBox="0 0 24 24"
                                            >
                                              <svg
                                                aria-hidden={true}
                                                aria-labelledby={undefined}
                                                className="glamor-12"
                                                role="img"
                                                viewBox="0 0 24 24"
                                              >
                                                <g>
                                                  <path
                                                    d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                                                  />
                                                </g>
                                              </svg>
                                            </glamorous(svg)>
                                          </Icon>
                                        </IconCloud>
                                      </span>
                                    </glamorous(span)>
                                  </div>
                                </MenuItem>
                              </MenuItem>
                              <MenuDivider
                                key="2"
                              >
                                <MenuDivider
                                  role="separator"
                                >
                                  <div
                                    className="glamor-24"
                                    role="separator"
                                  />
                                </MenuDivider>
                              </MenuDivider>
                              <MenuItem
                                item={
                                  Object {
                                    "text": "Danger variant",
                                    "variant": "danger",
                                  }
                                }
                                key="3"
                                variant="danger"
                              >
                                <MenuItem
                                  disabled={undefined}
                                  item={
                                    Object {
                                      "text": "Danger variant",
                                      "variant": "danger",
                                    }
                                  }
                                  onClick={undefined}
                                  onKeyDown={undefined}
                                  tabIndex={0}
                                  variant="danger"
                                >
                                  <div
                                    className="glamor-30"
                                    onClick={undefined}
                                    onKeyDown={undefined}
                                    tabIndex={0}
                                  >
                                    <glamorous(span)>
                                      <span
                                        className="glamor-3"
                                      >
                                        <IconDanger
                                          size="1.5em"
                                        >
                                          <Icon
                                            rtl={false}
                                            size="1.5em"
                                          >
                                            <glamorous(svg)
                                              aria-hidden={true}
                                              aria-labelledby={undefined}
                                              role="img"
                                              rtl={false}
                                              size="1.5em"
                                              viewBox="0 0 24 24"
                                            >
                                              <svg
                                                aria-hidden={true}
                                                aria-labelledby={undefined}
                                                className="glamor-12"
                                                role="img"
                                                viewBox="0 0 24 24"
                                              >
                                                <g>
                                                  <path
                                                    d="M3.94 19.49h16.118a1 1 0 0 0 .866-1.498l-8.06-13.99a.996.996 0 0 0-1.732-.001L3.074 17.993a.998.998 0 0 0 .867 1.499zM12 17a1 1 0 1 1 0-2 1 1 0 0 1 0 2zm1-3.503h-2v-5h2v5z"
                                                  />
                                                </g>
                                              </svg>
                                            </glamorous(svg)>
                                          </Icon>
                                        </IconDanger>
                                        <glamorous(span)>
                                          <span
                                            className="glamor-2"
                                          >
                                            <glamorous(span)>
                                              <span
                                                className="glamor-0"
                                              >
                                                Danger variant
                                              </span>
                                            </glamorous(span)>
                                            <glamorous(span)>
                                              <span
                                                className="glamor-1"
                                              />
                                            </glamorous(span)>
                                          </span>
                                        </glamorous(span)>
                                      </span>
                                    </glamorous(span)>
                                  </div>
                                </MenuItem>
                              </MenuItem>
                              <MenuItem
                                disabled={true}
                                item={
                                  Object {
                                    "disabled": true,
                                    "onClick": [Function],
                                    "text": "Disabled menu item",
                                  }
                                }
                                key="4"
                                onClick={[Function]}
                              >
                                <MenuItem
                                  disabled={true}
                                  item={
                                    Object {
                                      "disabled": true,
                                      "onClick": [Function],
                                      "text": "Disabled menu item",
                                    }
                                  }
                                  onClick={undefined}
                                  onKeyDown={[Function]}
                                  tabIndex="-1"
                                  variant="regular"
                                >
                                  <div
                                    className="glamor-35"
                                    onClick={undefined}
                                    onKeyDown={[Function]}
                                    tabIndex="-1"
                                  >
                                    <glamorous(span)>
                                      <span
                                        className="glamor-3"
                                      >
                                        <glamorous(span)>
                                          <span
                                            className="glamor-2"
                                          >
                                            <glamorous(span)>
                                              <span
                                                className="glamor-0"
                                              >
                                                Disabled menu item
                                              </span>
                                            </glamorous(span)>
                                            <glamorous(span)>
                                              <span
                                                className="glamor-1"
                                              />
                                            </glamorous(span)>
                                          </span>
                                        </glamorous(span)>
                                      </span>
                                    </glamorous(span)>
                                  </div>
                                </MenuItem>
                              </MenuItem>
                              <MenuItem
                                avatar="/images/125x125.png"
                                href="/components/menu-item#custom-render"
                                item={
                                  Object {
                                    "avatar": "/images/125x125.png",
                                    "href": "/components/menu-item#custom-render",
                                    "render": [Function],
                                    "text": "Custom render",
                                  }
                                }
                                key="5"
                                render={[Function]}
                              >
                                <ThemedComponent
                                  item={
                                    Object {
                                      "avatar": "/images/125x125.png",
                                      "href": "/components/menu-item#custom-render",
                                      "render": [Function],
                                      "text": "Custom render",
                                    }
                                  }
                                  itemProps={
                                    Object {
                                      "avatar": "/images/125x125.png",
                                      "children": "Custom render",
                                      "href": "/components/menu-item#custom-render",
                                      "onKeyDown": undefined,
                                      "tabIndex": 0,
                                      "variant": "regular",
                                    }
                                  }
                                  render={[Function]}
                                >
                                  <Component
                                    item={
                                      Object {
                                        "avatar": "/images/125x125.png",
                                        "href": "/components/menu-item#custom-render",
                                        "render": [Function],
                                        "text": "Custom render",
                                      }
                                    }
                                    itemProps={
                                      Object {
                                        "avatar": "/images/125x125.png",
                                        "children": "Custom render",
                                        "href": "/components/menu-item#custom-render",
                                        "onKeyDown": undefined,
                                        "tabIndex": 0,
                                        "variant": "regular",
                                      }
                                    }
                                    render={[Function]}
                                    theme={
                                      Object {
                                        "backgroundColor_danger": "#db2929",
                                        "backgroundColor_danger_active": "#c71818",
                                        "backgroundColor_danger_activeMuted": "#f79999",
                                        "backgroundColor_danger_focus": "#db2929",
                                        "backgroundColor_danger_hover": "#eb4d4d",
                                        "backgroundColor_danger_muted": "#fabebe",
                                        "backgroundColor_disabled": "#ebeff5",
                                        "backgroundColor_input": "#fff",
                                        "backgroundColor_link_focus": "#dde3ed",
                                        "backgroundColor_success": "#0a8f4c",
                                        "backgroundColor_success_active": "#06783f",
                                        "backgroundColor_success_activeMuted": "#95f5c3",
                                        "backgroundColor_success_focus": "#0a8f4c",
                                        "backgroundColor_success_hover": "#10a35a",
                                        "backgroundColor_success_muted": "#c0fadc",
                                        "backgroundColor_warning": "#e05b2b",
                                        "backgroundColor_warning_active": "#cf4615",
                                        "backgroundColor_warning_activeMuted": "#fab69d",
                                        "backgroundColor_warning_focus": "#e05b2b",
                                        "backgroundColor_warning_hover": "#ed774c",
                                        "backgroundColor_warning_muted": "#fcd0c0",
                                        "borderColor": "#c8d1e0",
                                        "borderColor_active": "#2e6fd9",
                                        "borderColor_danger": "#db2929",
                                        "borderColor_danger_active": "#c71818",
                                        "borderColor_danger_focus": "#c71818",
                                        "borderColor_danger_hover": "#c71818",
                                        "borderColor_danger_muted": "#f27474",
                                        "borderColor_focus": "#2e6fd9",
                                        "borderColor_hover": "#2e6fd9",
                                        "borderColor_success": "#10a35a",
                                        "borderColor_success_active": "#0a8f4c",
                                        "borderColor_success_focus": "#0a8f4c",
                                        "borderColor_success_hover": "#0a8f4c",
                                        "borderColor_success_muted": "#67eba7",
                                        "borderColor_warning": "#e05b2b",
                                        "borderColor_warning_active": "#cf4615",
                                        "borderColor_warning_focus": "#cf4615",
                                        "borderColor_warning_hover": "#cf4615",
                                        "borderColor_warning_muted": "#f59776",
                                        "borderRadius_1": "0.1875em",
                                        "color_black": "#1d1f24",
                                        "color_caption": "#58606e",
                                        "color_gray_10": "#f5f7fa",
                                        "color_gray_100": "#333840",
                                        "color_gray_20": "#ebeff5",
                                        "color_gray_30": "#dde3ed",
                                        "color_gray_40": "#c8d1e0",
                                        "color_gray_50": "#afbacc",
                                        "color_gray_60": "#8e99ab",
                                        "color_gray_70": "#707a8a",
                                        "color_gray_80": "#58606e",
                                        "color_gray_90": "#434a54",
                                        "color_placeholder": "#8e99ab",
                                        "color_text": "#333840",
                                        "color_text_danger": "#db2929",
                                        "color_text_danger_active": "#c71818",
                                        "color_text_danger_focus": "#db2929",
                                        "color_text_danger_hover": "#eb4d4d",
                                        "color_text_disabled": "#afbacc",
                                        "color_text_ondanger": "#fff",
                                        "color_text_onprimary": "#fff",
                                        "color_text_onsuccess": "#fff",
                                        "color_text_onwarning": "#fff",
                                        "color_text_primary": "#2e6fd9",
                                        "color_text_primary_active": "#1f5dc2",
                                        "color_text_primary_focus": "#2e6fd9",
                                        "color_text_primary_hover": "#4a89e8",
                                        "color_text_success": "#06783f",
                                        "color_text_success_active": "#046132",
                                        "color_text_success_focus": "#06783f",
                                        "color_text_success_hover": "#0a8f4c",
                                        "color_text_warning": "#cf4615",
                                        "color_text_warning_active": "#bd3909",
                                        "color_text_warning_focus": "#cf4615",
                                        "color_text_warning_hover": "#e05b2b",
                                        "color_theme_10": "#e6eefc",
                                        "color_theme_100": "#0f397d",
                                        "color_theme_20": "#c2dbfc",
                                        "color_theme_30": "#9dc2fa",
                                        "color_theme_40": "#72a5f2",
                                        "color_theme_50": "#4a89e8",
                                        "color_theme_60": "#2e6fd9",
                                        "color_theme_70": "#1f5dc2",
                                        "color_theme_80": "#164ea8",
                                        "color_theme_90": "#114091",
                                        "color_white": "#fff",
                                        "direction": "ltr",
                                        "fontFamily": "Open Sans",
                                        "fontFamily_monospace": "\\"SF Mono\\", \\"Droid Sans Mono\\", \\"Source Code Pro\\", Monaco, Consolas, \\"Courier New\\", Courier, monospace",
                                        "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
                                        "fontSize_base": 16,
                                        "fontSize_h1": "2.125em",
                                        "fontSize_h2": "1.75em",
                                        "fontSize_h3": "1.375em",
                                        "fontSize_h4": "1.125em",
                                        "fontSize_h5": "0.875em",
                                        "fontSize_h6": "0.875em",
                                        "fontSize_mouse": "0.6875em",
                                        "fontSize_prose": "1em",
                                        "fontSize_ui": "0.875em",
                                        "fontWeight_bold": 700,
                                        "fontWeight_extraBold": 800,
                                        "fontWeight_regular": 400,
                                        "fontWeight_semiBold": 600,
                                        "lineHeight": 1.25,
                                        "lineHeight_prose": 1.5,
                                        "shadow_1": "0 1px 2px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.2)",
                                        "shadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.2)",
                                        "shadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 8px 16px 0 rgba(0,0,0,0.2)",
                                        "shadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 20px 16px -8px rgba(0,0,0,0.2)",
                                        "shadow_5": "0 16px 24px 0 rgba(0,0,0,0.2), 0 32px 24px -16px rgba(0,0,0,0.2)",
                                        "size_jumbo": "3.25em",
                                        "size_large": "2.5em",
                                        "size_medium": "2em",
                                        "size_small": "1.5em",
                                        "space_inline_lg": "1.5em",
                                        "space_inline_md": "1em",
                                        "space_inline_sm": "0.5em",
                                        "space_inline_xl": "2em",
                                        "space_inline_xs": "0.25em",
                                        "space_inline_xxl": "4em",
                                        "space_inline_xxs": "0.125em",
                                        "space_inset_lg": "1.5em",
                                        "space_inset_md": "1em",
                                        "space_inset_sm": "0.5em",
                                        "space_stack_lg": "1.5em",
                                        "space_stack_md": "1em",
                                        "space_stack_sm": "0.5em",
                                        "space_stack_xl": "2em",
                                        "space_stack_xs": "0.25em",
                                        "space_stack_xxl": "4em",
                                        "space_stack_xxs": "0.125em",
                                        "zIndex_100": 100,
                                        "zIndex_1600": 1600,
                                        "zIndex_200": 200,
                                        "zIndex_400": 400,
                                        "zIndex_800": 800,
                                      }
                                    }
                                  >
                                    <glamorous(a)
                                      avatar="/images/125x125.png"
                                      disabled={undefined}
                                      href="/components/menu-item#custom-render"
                                      onKeyDown={undefined}
                                      tabIndex={0}
                                      variant="regular"
                                    >
                                      <a
                                        className="glamor-38"
                                        href="/components/menu-item#custom-render"
                                        onKeyDown={undefined}
                                        tabIndex={0}
                                      >
                                        <glamorous(img)
                                          alt="Photo of Custom render"
                                          src="/images/125x125.png"
                                        >
                                          <img
                                            alt="Photo of Custom render"
                                            className="glamor-36"
                                            src="/images/125x125.png"
                                          />
                                        </glamorous(img)>
                                        <glamorous(span)>
                                          <span
                                            className="glamor-37"
                                          >
                                            Custom render
                                          </span>
                                        </glamorous(span)>
                                      </a>
                                    </glamorous(a)>
                                  </Component>
                                </ThemedComponent>
                              </MenuItem>
                            </div>
                          </MenuGroup>
                        </MenuGroup>
                      </div>
                    </Menu>
                  </Menu>
                </div>
              </glamorous(div)>
            </wrappedPFC>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;
